# dmserv-rust

./: .env.example  Cargo.toml  docker-compose.yml
.sqlx/: query-0fbaeb985d9e69a11a0db898bc265303419db2391ece162db595a4083fd931a0.json  query-200b98523d97bf4c36de24c64dea7981a1b879f583db8e3bbd1a1abf5d95adfa.json  query-6811ebbabb68f8b7311cb93e681312551e54c94d9d81beeb7b96a0750d0e5d4e.json  query-a3e3e80b046921bfcdd3554581260932146395d6844e6836be4cbc42291d0261.json  query-ab01d107385978b4f381856b743020689da5ae8d8e5c2593609b33c843b4cafd.json  query-b2b29032cdb2487b75b9de0c2d5702b4baf8e3e55561f099db46cf08e4198940.json  query-e00facdbccc5025201e00e6911c253d9b775734fe5c07bf53abdae8e5a36d821.json  query-f123a5fb32baf556fa9be38b7539710d942833799c38e25c8170b9a2c5ee9376.json
migrations/: 20241119143726_structure.sql  20241121200043_create_mod_pk_guilds.sql  20241123145539_mod_pk_guilds_add_system_id.sql  20241202192451_create_mod_emoji_usage_emoji_use.sql  20241204155741_mod_emoji_usage_emoji_use_add_name.sql  20241206152955_mod_emoji_usage_emoji_usage_add_animated.sql  20241206153009_mod_emoji_usage_emoji_usage_rename_emoji_name_to_name.sql  20241206153140_mod_emoji_usage_emoji_usage_drop_user_id.sql  20241216155832_mod_emoji_usage_emoji_use_rename_to_mod_emoji_emoji_uses.sql
src/: config.rs  events.rs  main.rs  modules.rs  task.rs  types.rs  util.rs
src/modules/: emoji.rs  fronters.rs  pk.rs  roles.rs  stats.rs
src/modules/emoji/: commands.rs  db.rs  event_handler.rs  shared.rs
src/modules/fronters/: commands.rs  db.rs  tasks.rs
src/modules/pk/: commands.rs  db.rs  (+1 more)
(+5 files in other folders)
