[package]
name = "dmserv-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
pkrs = "0.4.0"
poise = "0.6.1"
serde = "1.0.215"
serde-envfile = "0.1.0"
serde_either = "0.2.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "json", "chrono", "migrate", "postgres", "macros", "derive"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
