[package]
name = "dmserv-rust"
version = "0.3.1"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
dotenvy = "0.15.7"
num-format = "0.4.4"
pkrs = "0.4.0"
poise = "0.6.1"
serde = "1.0.215"
serde-envfile = "0.1.0"
serde_either = "0.2.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "json", "chrono", "migrate", "postgres", "macros", "derive"] }
sysinfo = "0.32.0"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tokio_schedule = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
vergen-gitcl = { version = "1.0.1", features = ["build"] }
